fix(console): log all API calls including unauthorized (401) requests